# snf-test-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250315000000_initial.py
app/: __init__.py  main.py
app/api/routes/: __init__.py  health.py
app/core/: config.py  logging.py
app/database/: __init__.py  session.py
app/models/: __init__.py  health.py
app/schemas/: __init__.py  health.py
app/services/: __init__.py  diagnostics.py
tests/: __init__.py  test_health.py
